refactor: remove hardcoded profiling path, use configurable Paths.get()